# KelpCoverage

./: README.md  cli.py  heatmap.py  main.py  pyproject.toml  segmentation_processors.py  tator_download.py  visualization.py
src/kelp_coverage/: cli.py  heatmap.py  pixel_analysis.py  pyproject.toml  sahisam.py  segmentation_processors.py  tator_download.py  visualization.py
test/: test_real_data.py
