[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "kelp_coverage"
version = "1.7.8"
authors = [
	{name="Tim Sananikone", email="tims3900@gmail.com"},
]
description = "A tool for calculating kelp coverage from UAV images utilizing Segment Anything Models (SAM)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pandas",
    "matplotlib",
    "shapely",
    "numpy",
    "torch",
    "tqdm",
    "segment-anything-py",
    "sahi",
    "ultralytics",
    "opencv-python",
    "tator",
    "urllib3",
    "geopandas",
    "contextily",
]

[project.urls]
Homepage = "https://github.com/mbari-org/KelpCoverage"
Issues = "https://github.com/mbari-org/KelpCoverage/issues"

[project.scripts]
kelp-coverage = "kelp_coverage.cli:main"

[tool.setuptools.packages.find]
exclude = ["docs*"]
